src/ir/ir_parser.output
Grammar

    0 $accept: input "end of file"

    1 input: metadata_def_list type_def_list function_def_list

    2 metadata_def_list: %empty
    3                  | metadata_def_list metadata_def

    4 metadata_def: STRING_LITERAL COLON STRING_LITERAL

    5 function_def_list: %empty
    6                  | function_def_list function_def

    7 type_def_list: %empty
    8              | type_def_list type_def

    9 type_def: TYPE IDENTIFIER LBRACE type_field_list RBRACE

   10 type_field_list: %empty
   11                | type_field_list type_field

   12 type_field: ir_identifier_type IDENTIFIER SEMICOLON

   13 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   14             | DEF ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

   15 function_arg_list: LPAREN RPAREN
   16                  | LPAREN function_arg_list_core RPAREN

   17 function_arg_list_core: function_arg
   18                       | function_arg_list_core COMMA function_arg

   19 function_arg: ir_identifier_type IDENTIFIER

   20 basic_block_list: %empty
   21                 | basic_block_list basic_block

   22 basic_block: IDENTIFIER COLON instruction_group

   23 instruction_group: instruction
   24                  | instruction_group instruction

   25 instruction: identifier ASSIGN expr SEMICOLON
   26            | expr SEMICOLON

   27 expr: OPCODE instruction_options
   28     | OPCODE instruction_options ir_identifier_type
   29     | OPCODE instruction_options operand_list
   30     | OPCODE instruction_options operand_list label_list
   31     | OPCODE instruction_options ir_identifier_type operand_list
   32     | OPCODE instruction_options ir_identifier_type operand_list label_list

   33 instruction_options: %empty
   34                    | LBRACKET instruction_option_list RBRACKET

   35 instruction_option_list: IDENTIFIER
   36                        | instruction_option_list IDENTIFIER

   37 label_list: LBRACKET label_list_core RBRACKET

   38 label_list_core: label
   39                | label_list_core COMMA label

   40 label: LABEL POND IDENTIFIER

   41 operand_list: operand
   42             | operand_list operand

   43 operand: ir_value
   44        | identifier

   45 identifier: PERCENT IDENTIFIER

   46 ir_identifier_type: IDENTIFIER
   47                   | ir_value_type
   48                   | ir_value_type_array
   49                   | IDENTIFIER STAR
   50                   | ir_value_type STAR
   51                   | ir_value_type_array STAR

   52 ir_value: ir_value_type_short_integer_numeric DECIMALINTEGER
   53         | ir_value_type_long_integer_numeric DECIMALINTEGER
   54         | TYPE_NAME_SPF FLOATINGNUM
   55         | TYPE_NAME_DPF FLOATINGNUM
   56         | ir_value_type_string STRING_LITERAL
   57         | TYPE_NAME_BOOLEAN BOOLEAN_CONSTANT
   58         | TYPE_NAME_BOOLEAN DECIMALINTEGER

   59 ir_value_type: ir_value_type_integer_numeric
   60              | ir_value_type_floating_numeric
   61              | ir_value_type_string
   62              | TYPE_NAME_VOID
   63              | TYPE_NAME_BOOLEAN
   64              | TYPE_NAME_OBJECT

   65 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER STAR ir_identifier_type RBRACKET

   66 ir_value_type_string: TYPE_NAME_STRING

   67 ir_value_type_floating_numeric: TYPE_NAME_SPF
   68                               | TYPE_NAME_DPF

   69 ir_value_type_integer_numeric: ir_value_type_short_integer_numeric
   70                              | ir_value_type_long_integer_numeric

   71 ir_value_type_long_integer_numeric: TYPE_NAME_I64
   72                                   | TYPE_NAME_UI64

   73 ir_value_type_short_integer_numeric: TYPE_NAME_I8
   74                                    | TYPE_NAME_UI8
   75                                    | TYPE_NAME_I16
   76                                    | TYPE_NAME_UI16
   77                                    | TYPE_NAME_I32
   78                                    | TYPE_NAME_UI32


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
TYPE_NAME_I8 (258) 73
TYPE_NAME_UI8 (259) 74
TYPE_NAME_I16 (260) 75
TYPE_NAME_UI16 (261) 76
TYPE_NAME_I32 (262) 77
TYPE_NAME_UI32 (263) 78
TYPE_NAME_I64 (264) 71
TYPE_NAME_UI64 (265) 72
TYPE_NAME_SPF (266) 54 67
TYPE_NAME_DPF (267) 55 68
TYPE_NAME_BOOLEAN (268) 57 58 63
TYPE_NAME_VOID (269) 62
TYPE_NAME_STRING (270) 66
TYPE_NAME_OBJECT (271) 64
OPCODE (272) 27 28 29 30 31 32
ARRAY (273) 65
DEF (274) 13 14
TYPE (275) 9
IDENTIFIER (276) 9 12 13 14 19 22 35 36 40 45 46 49
STRING_LITERAL (277) 4 56
DECIMALINTEGER (278) 52 53 58 65
FLOATINGNUM (279) 54 55
BOOLEAN_CONSTANT (280) 57
COMMA (281) 18 39
COLON (282) 4 14 22
SEMICOLON (283) 12 25 26
PERCENT (284) 45
STAR (285) 49 50 51 65
POND (286) 40
ASSIGN (287) 25
LPAREN (288) 15 16
RPAREN (289) 15 16
LBRACKET (290) 34 37 65
RBRACKET (291) 34 37 65
LBRACE (292) 9 13 14
RBRACE (293) 9 13 14
LABEL (294) 40


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
input (41)
    on left: 1, on right: 0
metadata_def_list (42)
    on left: 2 3, on right: 1 3
metadata_def (43)
    on left: 4, on right: 3
function_def_list (44)
    on left: 5 6, on right: 1 6
type_def_list (45)
    on left: 7 8, on right: 1 8
type_def (46)
    on left: 9, on right: 8
type_field_list (47)
    on left: 10 11, on right: 9 11
type_field (48)
    on left: 12, on right: 11
function_def (49)
    on left: 13 14, on right: 6
function_arg_list (50)
    on left: 15 16, on right: 13 14
function_arg_list_core (51)
    on left: 17 18, on right: 16 18
function_arg (52)
    on left: 19, on right: 17 18
basic_block_list (53)
    on left: 20 21, on right: 13 14 21
basic_block (54)
    on left: 22, on right: 21
instruction_group (55)
    on left: 23 24, on right: 22 24
instruction (56)
    on left: 25 26, on right: 23 24
expr (57)
    on left: 27 28 29 30 31 32, on right: 25 26
instruction_options (58)
    on left: 33 34, on right: 27 28 29 30 31 32
instruction_option_list (59)
    on left: 35 36, on right: 34 36
label_list (60)
    on left: 37, on right: 30 32
label_list_core (61)
    on left: 38 39, on right: 37 39
label (62)
    on left: 40, on right: 38 39
operand_list (63)
    on left: 41 42, on right: 29 30 31 32 42
operand (64)
    on left: 43 44, on right: 41 42
identifier (65)
    on left: 45, on right: 25 44
ir_identifier_type (66)
    on left: 46 47 48 49 50 51, on right: 12 13 14 19 28 31 32 65
ir_value (67)
    on left: 52 53 54 55 56 57 58, on right: 43
ir_value_type (68)
    on left: 59 60 61 62 63 64, on right: 47 50
ir_value_type_array (69)
    on left: 65, on right: 48 51
ir_value_type_string (70)
    on left: 66, on right: 56 61
ir_value_type_floating_numeric (71)
    on left: 67 68, on right: 60
ir_value_type_integer_numeric (72)
    on left: 69 70, on right: 59
ir_value_type_long_integer_numeric (73)
    on left: 71 72, on right: 53 70
ir_value_type_short_integer_numeric (74)
    on left: 73 74 75 76 77 78, on right: 52 69


State 0

    0 $accept: . input "end of file"

    $default  reduce using rule 2 (metadata_def_list)

    input              go to state 1
    metadata_def_list  go to state 2


State 1

    0 $accept: input . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 input: metadata_def_list . type_def_list function_def_list
    3 metadata_def_list: metadata_def_list . metadata_def

    STRING_LITERAL  shift, and go to state 4

    $default  reduce using rule 7 (type_def_list)

    metadata_def   go to state 5
    type_def_list  go to state 6


State 3

    0 $accept: input "end of file" .

    $default  accept


State 4

    4 metadata_def: STRING_LITERAL . COLON STRING_LITERAL

    COLON  shift, and go to state 7


State 5

    3 metadata_def_list: metadata_def_list metadata_def .

    $default  reduce using rule 3 (metadata_def_list)


State 6

    1 input: metadata_def_list type_def_list . function_def_list
    8 type_def_list: type_def_list . type_def

    TYPE  shift, and go to state 8

    $default  reduce using rule 5 (function_def_list)

    function_def_list  go to state 9
    type_def           go to state 10


State 7

    4 metadata_def: STRING_LITERAL COLON . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 11


State 8

    9 type_def: TYPE . IDENTIFIER LBRACE type_field_list RBRACE

    IDENTIFIER  shift, and go to state 12


State 9

    1 input: metadata_def_list type_def_list function_def_list .
    6 function_def_list: function_def_list . function_def

    DEF  shift, and go to state 13

    $default  reduce using rule 1 (input)

    function_def  go to state 14


State 10

    8 type_def_list: type_def_list type_def .

    $default  reduce using rule 8 (type_def_list)


State 11

    4 metadata_def: STRING_LITERAL COLON STRING_LITERAL .

    $default  reduce using rule 4 (metadata_def)


State 12

    9 type_def: TYPE IDENTIFIER . LBRACE type_field_list RBRACE

    LBRACE  shift, and go to state 15


State 13

   13 function_def: DEF . ir_identifier_type IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   14             | DEF . ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31

    ir_identifier_type                   go to state 32
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 14

    6 function_def_list: function_def_list function_def .

    $default  reduce using rule 6 (function_def_list)


State 15

    9 type_def: TYPE IDENTIFIER LBRACE . type_field_list RBRACE

    $default  reduce using rule 10 (type_field_list)

    type_field_list  go to state 40


State 16

   73 ir_value_type_short_integer_numeric: TYPE_NAME_I8 .

    $default  reduce using rule 73 (ir_value_type_short_integer_numeric)


State 17

   74 ir_value_type_short_integer_numeric: TYPE_NAME_UI8 .

    $default  reduce using rule 74 (ir_value_type_short_integer_numeric)


State 18

   75 ir_value_type_short_integer_numeric: TYPE_NAME_I16 .

    $default  reduce using rule 75 (ir_value_type_short_integer_numeric)


State 19

   76 ir_value_type_short_integer_numeric: TYPE_NAME_UI16 .

    $default  reduce using rule 76 (ir_value_type_short_integer_numeric)


State 20

   77 ir_value_type_short_integer_numeric: TYPE_NAME_I32 .

    $default  reduce using rule 77 (ir_value_type_short_integer_numeric)


State 21

   78 ir_value_type_short_integer_numeric: TYPE_NAME_UI32 .

    $default  reduce using rule 78 (ir_value_type_short_integer_numeric)


State 22

   71 ir_value_type_long_integer_numeric: TYPE_NAME_I64 .

    $default  reduce using rule 71 (ir_value_type_long_integer_numeric)


State 23

   72 ir_value_type_long_integer_numeric: TYPE_NAME_UI64 .

    $default  reduce using rule 72 (ir_value_type_long_integer_numeric)


State 24

   67 ir_value_type_floating_numeric: TYPE_NAME_SPF .

    $default  reduce using rule 67 (ir_value_type_floating_numeric)


State 25

   68 ir_value_type_floating_numeric: TYPE_NAME_DPF .

    $default  reduce using rule 68 (ir_value_type_floating_numeric)


State 26

   63 ir_value_type: TYPE_NAME_BOOLEAN .

    $default  reduce using rule 63 (ir_value_type)


State 27

   62 ir_value_type: TYPE_NAME_VOID .

    $default  reduce using rule 62 (ir_value_type)


State 28

   66 ir_value_type_string: TYPE_NAME_STRING .

    $default  reduce using rule 66 (ir_value_type_string)


State 29

   64 ir_value_type: TYPE_NAME_OBJECT .

    $default  reduce using rule 64 (ir_value_type)


State 30

   65 ir_value_type_array: ARRAY . LBRACKET DECIMALINTEGER STAR ir_identifier_type RBRACKET

    LBRACKET  shift, and go to state 41


State 31

   46 ir_identifier_type: IDENTIFIER .
   49                   | IDENTIFIER . STAR

    STAR  shift, and go to state 42

    $default  reduce using rule 46 (ir_identifier_type)


State 32

   13 function_def: DEF ir_identifier_type . IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   14             | DEF ir_identifier_type . IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    IDENTIFIER  shift, and go to state 43


State 33

   47 ir_identifier_type: ir_value_type .
   50                   | ir_value_type . STAR

    STAR  shift, and go to state 44

    $default  reduce using rule 47 (ir_identifier_type)


State 34

   48 ir_identifier_type: ir_value_type_array .
   51                   | ir_value_type_array . STAR

    STAR  shift, and go to state 45

    $default  reduce using rule 48 (ir_identifier_type)


State 35

   61 ir_value_type: ir_value_type_string .

    $default  reduce using rule 61 (ir_value_type)


State 36

   60 ir_value_type: ir_value_type_floating_numeric .

    $default  reduce using rule 60 (ir_value_type)


State 37

   59 ir_value_type: ir_value_type_integer_numeric .

    $default  reduce using rule 59 (ir_value_type)


State 38

   70 ir_value_type_integer_numeric: ir_value_type_long_integer_numeric .

    $default  reduce using rule 70 (ir_value_type_integer_numeric)


State 39

   69 ir_value_type_integer_numeric: ir_value_type_short_integer_numeric .

    $default  reduce using rule 69 (ir_value_type_integer_numeric)


State 40

    9 type_def: TYPE IDENTIFIER LBRACE type_field_list . RBRACE
   11 type_field_list: type_field_list . type_field

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31
    RBRACE             shift, and go to state 46

    type_field                           go to state 47
    ir_identifier_type                   go to state 48
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 41

   65 ir_value_type_array: ARRAY LBRACKET . DECIMALINTEGER STAR ir_identifier_type RBRACKET

    DECIMALINTEGER  shift, and go to state 49


State 42

   49 ir_identifier_type: IDENTIFIER STAR .

    $default  reduce using rule 49 (ir_identifier_type)


State 43

   13 function_def: DEF ir_identifier_type IDENTIFIER . function_arg_list LBRACE basic_block_list RBRACE
   14             | DEF ir_identifier_type IDENTIFIER . function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    LPAREN  shift, and go to state 50

    function_arg_list  go to state 51


State 44

   50 ir_identifier_type: ir_value_type STAR .

    $default  reduce using rule 50 (ir_identifier_type)


State 45

   51 ir_identifier_type: ir_value_type_array STAR .

    $default  reduce using rule 51 (ir_identifier_type)


State 46

    9 type_def: TYPE IDENTIFIER LBRACE type_field_list RBRACE .

    $default  reduce using rule 9 (type_def)


State 47

   11 type_field_list: type_field_list type_field .

    $default  reduce using rule 11 (type_field_list)


State 48

   12 type_field: ir_identifier_type . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 52


State 49

   65 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER . STAR ir_identifier_type RBRACKET

    STAR  shift, and go to state 53


State 50

   15 function_arg_list: LPAREN . RPAREN
   16                  | LPAREN . function_arg_list_core RPAREN

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31
    RPAREN             shift, and go to state 54
